# CoNSync

./: .CoNSync_state  .gitignore  BUILDING.md  CMakeLists.txt  CoNSync.1  CoNSync.cpp  CoNSync.rc  CoNSync.service  CoNSync.spec  CoNSync_AirPlay_Receiver_Setup.iss  CoNSync_Launcher.vbs  CoNSync_Setup.iss  README.html  README.md  README.txt  build_release.ps1  debug_mode.bat  run_CoNSync.bat  run_CoNSync_fw.bat
.github/workflows/: build.yml
Bluetooth_LE_beacon/: CoNSync-beacon.1  CoNSync-beacon.py  CoNSync_beacon_module_BleuIO.py  CoNSync_beacon_module_BlueZ.py  CoNSync_beacon_module_HCI.py  CoNSync_beacon_module_winrt.py
bonjour_sdk/Include/: dns_sd.h
bonjour_sdk/Lib/x64/: dnssd.def
huifu/: CoNSync部署文档.md  run_CoNSync.cmd  run_CoNSync_d3d.cmd
huifu/CoNSync-master/: CMakeLists.txt  CoNSync.cpp  CoNSync.service  README.md
huifu/CoNSync-master/Bluetooth_LE_beacon/: CoNSync_beacon_module_BlueZ.py
huifu/CoNSync-master/lib/: CMakeLists.txt  http_handlers.h
huifu/CoNSync-master/lib/mdnsd/: dnssd_mdnsd.c
huifu/CoNSync-master/renderers/: CMakeLists.txt  mux_renderer.h  win32_window.c  x_display_fix.h
installer/: run.bat  setup.nsi
lib/: CMakeLists.txt  crypto.c  dnssdint.h  http_handlers.h  raop.c  raop.h  raop_buffer.c  raop_handlers.h  raop_rtp.c  stream.h
lib/mdnsd/: dnssd_mdnsd.c  mdnsd.c
renderers/: CMakeLists.txt  audio_renderer.c  audio_renderer.h  mux_renderer.c  mux_renderer.h  video_renderer.c  video_renderer.h  win32_window.c  win32_window.h  x_display_fix.h
